# market-diffusion-simulator

./: .gitignore  LICENSE  README.md  diffusion_stock_scenario_generator.ipynb  pyproject.toml  requirements.txt
notebooks/: final_project_colab.ipynb
scripts/: run_smoke.py
src/market_diffusion/: __init__.py  config.py  data.py  diffusion.py  evaluation.py  options.py  plotting.py  windows.py
